--- a/src/main/java/com/network/monitor/view/MainForm.form
+++ b/src/main/java/com/network/monitor/view/MainForm.form
@@ -374,12 +374,12 @@
                 <Component class="javax.swing.JTable" name="eventsTable">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="5" rowCount="4">
-                        <Column editable="false" title="Time" type="java.lang.Object"/>
+                      <Table columnCount="5" rowCount="0">
+                        <Column editable="false" title="Time" type="java.lang.String"/>
                         <Column editable="false" title="Server" type="java.lang.String"/>
                         <Column editable="false" title="Message" type="java.lang.String"/>
-                        <Column editable="false" title="Type" type="java.lang.Object"/>
-                        <Column editable="false" title="Notification" type="java.lang.Object"/>
+                        <Column editable="false" title="Type" type="java.lang.String"/>
+                        <Column editable="false" title="Notification" type="java.lang.String"/>
                       </Table>
                     </Property>
                   </Properties>
