--- a/src/main/java/com/network/monitor/view/MainForm.form
+++ b/src/main/java/com/network/monitor/view/MainForm.form
@@ -95,7 +95,7 @@
                               </Group>
                               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="cpuTextField" pref="335" max="32767" attributes="0"/>
+                                  <Component id="cpuTextField" pref="337" max="32767" attributes="0"/>
                                   <Component id="ramTextField" max="32767" attributes="0"/>
                                   <Component id="dvdTextField" max="32767" attributes="0"/>
                                   <Component id="compModelTextField" alignment="0" max="32767" attributes="0"/>
@@ -302,7 +302,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel17">
               <Properties>
-                <Property name="text" type="java.lang.String" value="RAM Capacity (MB))"/>
+                <Property name="text" type="java.lang.String" value="RAM Capacity (MB)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="ramTextField">
