--- a/src/main/java/com/network/monitor/view/MainForm.form
+++ b/src/main/java/com/network/monitor/view/MainForm.form
@@ -75,7 +75,7 @@
                                   <Component id="jLabel13" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel14" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="computerNameTextField" alignment="1" pref="272" max="32767" attributes="0"/>
                                   <Component id="serialNoTextField" alignment="1" max="32767" attributes="0"/>
@@ -95,12 +95,18 @@
                               </Group>
                               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="cpuTextField" pref="337" max="32767" attributes="0"/>
+                                  <Component id="cpuTextField" pref="340" max="32767" attributes="0"/>
                                   <Component id="ramTextField" max="32767" attributes="0"/>
                                   <Component id="dvdTextField" max="32767" attributes="0"/>
                                   <Component id="compModelTextField" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="ipv4TextField" alignment="0" max="32767" attributes="0"/>
                                   <Component id="macTextField" alignment="0" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="ipv4TextField" min="-2" pref="116" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="jLabel28" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="ipv6TextField" max="32767" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                       </Group>
@@ -153,6 +159,8 @@
                                   <Component id="computerNameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel19" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="ipv4TextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel28" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ipv6TextField" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -336,6 +344,16 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="macTextField">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel28">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="IPV6"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="ipv6TextField">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
               </Properties>
